sfdx-source/force-app/main/default/objects/Quote_Line_Drawer_Attributes__mdt/Quote_Line_Drawer_Attributes__mdt.object-meta.xml
<CustomObject>
    <description>LEM-1486 To display the attributes on the quote configurator</description>
    <label>Quote Line Drawer Attributes</label>
    <pluralLabel>Quote Line Drawer Attributes</pluralLabel>
</CustomObject>