sfdx-source/force-app/main/default/objects/Quote_Line_Drawer_Attributes__mdt/fields/Applicable_Segment__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Segment__c</fullName>
    <description>LEM-13441: This field captures the account segment value for which this attribute is applicable.</description>
    <label>Applicable Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
                <default>true</default>
                <label>Enterprise</label>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>