sfdx-source/force-app/main/default/objects/Quote_Line_Drawer_Attributes__mdt/fields/Eligible_for_Product__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-6458- True if this attribute should show for this product when sold standalone</description>
    <label>Eligible for Product</label>
    <type>Checkbox</type>
</CustomField>