sfdx-source/force-app/main/default/objects/Quote_Line_Drawer_Attributes__mdt/fields/Eligible_Packages__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Packages__c</fullName>
    <description>LEM-6458: Packages Name to which this attribute applies to</description>
    <label>Eligible Packages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>