sfdx-source/force-app/main/default/objects/Quote_Line_Drawer_Attributes__mdt/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <default>true</default>
                <label>text</label>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>percent</fullName>
            </value>
            <value>
                <fullName>currency</fullName>
            </value>
            <value>
                <fullName>select</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>