sfdx-source/force-app/main/default/objects/Quote_Line_Drawer_Attributes__mdt/fields/Quote_Line_Drawer_Products__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Drawer_Products__c</fullName>
    <label>Quote Line Drawer Products</label>
    <referenceTo>Quote_Line_Drawer_Products__mdt</referenceTo>
    <relationshipLabel>Quote Line Drawer Attributes</relationshipLabel>
    <relationshipName>Quote_Line_Drawer_Attributes</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>