sfdx-source/force-app/main/default/objects/Quote_Line_Drawer_Attributes__mdt/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Sequence in which order the fields needs to be displayed.</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>