sfdx-source/force-app/main/default/objects/Quote_Line_Drawer_Attributes__mdt/listViews/All_QuoteLne_Drawer_Attributes.listView-meta.xml
<ListView>
    <fullName>All_QuoteLne_Drawer_Attributes</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Is_Active__c</columns>
    <columns>Field_Label__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Is_Required__c</columns>
    <columns>Quote_Line_Drawer_Products__c</columns>
    <columns>Sequence__c</columns>
    <columns>Eligible_for_Product__c</columns>
    <columns>Eligible_Packages__c</columns>
    <filterScope>Everything</filterScope>
    <label>All QuoteLne Drawer Attributes</label>
</ListView>